tests/negative/neg_chan_empty_recv.safe
-- Test: neg_chan_empty_recv
-- Description: Receiving from a channel that is provably empty.
--   A task immediately receives from a channel that has no sender.
--   This is a provable deadlock (no task can ever send to the channel).
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Expected: REJECT channel_deadlock

package empty_Recv_Test

   type msg is range 0 to 255;

   --  No_Sender_Ch: declared but no task ever sends to it.
   channel No_Sender_Ch : msg capacity 1;

   --  Receiver_Task: blocks forever waiting for data on an
   --  always-empty channel.
   task Receiver_Task
      v : msg;

      loop
         receive No_Sender_Ch, v;  -- ERROR: no sender exists for this channel




